--- a/project_2-3/index.html
+++ b/project_2-3/index.html
@@ -18,6 +18,7 @@
 </script>
 
 <body>
+    <!--
     <div class="wee" id="genNew">
         <h1>The Garden of Forking Paths </h1>
         <h4>By Jorge Luis Borges</h4><br>
@@ -26,7 +27,7 @@
             Dr. Yu Tsun, former teacher of English at the Tsingtao Hochschule, casts unsuspected light upon this event. The first two pages are missing.
         </p>
         <button onclick="start()" class="hu">click here</button>
-    </div>
+    </div>-->
     <div class="con">
         <div class="item left">
             <div>
