Update and rename index2.html to index.html

--- a/project/index.html
+++ b/project/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img id="cartoon" src="img/cartoon.png">
-    <a href="index.html">Let's Go Work!</a>
+    <a href="index1.html">Let's Go Work!</a>
 </body>
 </html>
